# timestep-ai

./: .env  .env.example  .gitignore  .prettierignore  .swcrc  README.md  agent-chat-analysis.md  agent-chatkit-migration-plan.md  agent-runner-flow-explanation.md  capacitor.config.ts  cucumber.cjs  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.ts  vercel.json
.github/workflows/: ci-cd.yml
api/: approval_widget.py  chatkit_server.py  index.py  sample_widget.py  stores.py  tools.py  weather.py
api/utils/: __init__.py
src/: App.tsx  index.css
src/api/: main.py  stores.py
src/components/: AgentCard.tsx  AgentRow.tsx  ApiKeyRow.tsx  ApiKeysSection.tsx  AuthGuard.tsx  BottomNav.tsx  ChatRow.tsx  CollectionItemRow.tsx  CollectionPage.tsx  CombinedAgentSelector.tsx  ConversationsList.tsx  CreateChatDialog.tsx  CreateDefaultsButton.tsx  DraggableResizableContainer.tsx  EditMCPServerDialog.tsx  EditModelProviderDialog.tsx  Header.tsx  IonicAgentCard.tsx  IonicLayout.tsx  ItemPage.tsx  Layout.tsx  MCPServerRow.tsx  McpServersSection.tsx  MessageRow.tsx  ModelProviderRow.tsx  ModelProvidersSection.tsx  ModelRow.tsx  ModernAgentCard.tsx  ModernHeader.tsx  ModernLayout.tsx  ModernSidebar.tsx  SettingsRow.tsx  Sidebar.tsx  SidebarMenu.tsx  SpanDetails.tsx  SpanRow.tsx  SpanTreeRow.tsx  ThreadCard.tsx  ThreadItemsList.tsx  TimingBar.tsx  (+4 more)
src/hooks/: useAuth.tsx  useVersion.tsx
src/pages/: Admin.tsx  Agent.tsx  (+26 more)
supabase/: config.toml  config.toml.example
tests/: personal-assistant.spec.ts  weather-assistant.spec.ts
(+293 files in other folders)
