[project]
name = "timestep-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.2",
    "openai-agents[sqlalchemy]>=0.4.2",
    "openai-chatkit>=1.0.2",
    "supabase>=2.22.4",
    "asyncpg>=0.29.0",
    "ollama>=0.6.0",
]
